# groundwork

./: .babelrc  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CNAME  LICENSE  Makefile  README.md  SECURITY.md  env.d.ts  index.html  jest.config.js  mkdocs.yaml  package.json  parse.py  pyproject.toml  settings.py  sitemap.xml  tsconfig.json  types.d.ts  vite.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pull-request.yml  release.yml
__mocks__/: mapbox-gl.ts
api/groundwork.contrib.airtable/: index.html
api/groundwork.contrib.airtable.datasources/: index.html
api/groundwork.core/: index.html
api/groundwork.core.cache/: index.html
api/groundwork.core.cron/: index.html
api/groundwork.core.datasources/: index.html
api/groundwork.core.internal/: index.html
api/groundwork.core.internal.asset_loader/: index.html
api/groundwork.core.internal.class_util/: index.html
api/groundwork.core.internal.collection_util/: index.html
api/groundwork.core.internal.sync_manager/: index.html
api/groundwork.core.management/: index.html
api/groundwork.core.management.commands/: index.html
api/groundwork.core.management.commands.run_cron_tasks/: index.html
api/groundwork.core.template/: index.html
api/groundwork.core.templatetags/: index.html
api/groundwork.core.templatetags.groundwork_core/: index.html
api/groundwork.core.types/: index.html
api/groundwork.geo/: index.html
api/groundwork.geo.examples/: index.html
api/groundwork.geo.templatetags/: index.html
api/groundwork.geo.templatetags.groundwork_geo/: index.html
api/groundwork.geo.territories/: index.html
api/groundwork.geo.territories.uk/: index.html
api/groundwork.geo.territories.uk.internal/: index.html
api/groundwork.geo.territories.uk.internal.serializers/: index.html
api/groundwork.geo.territories.uk.ons/: index.html
api/groundwork.geo.territories.uk.parliament/: index.html
api/groundwork.geo.territories.uk.postcodes/: index.html
code-style/: index.html
components/map.components/: index.html
contributing/: index.html
developing/: index.html
docs/: code-style.md  contributing.md  developing.md  index.md  pyck
docs/guides/: data-pipeline.md  getting-started.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
docs/templates/: text.mako
example/: context_processors.py  models.py  urls.py  wsgi.py
example/frontend/: main.ts
example/geo/: urls.py  views.py
example/migrations/: 0001_initial.py
example/templates/: base.html  map.html
example/uk/: models.py  urls.py  views.py
frontend/: index.bundled.ts  index.lib.ts  index.test-utils.ts
frontend/core/: index.ts  loader.ts  test-utils.ts
frontend/geo/: test-utils.ts
groundwork/core/: cache.py  datasources.py  template.py  types.py
groundwork/geo/: examples.py
guides/data-pipeline/: index.html
guides/getting-started/: index.html
overrides/partials/: footer.html
pyck/core/: api_client.py  cache.py  cron.py  datasource.py  datasources.py  models.py  template.py
pyck/geo/: examples.py
search/: search_index.json
test/: models.py  tags.py
(+92 files in other folders)
